--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -11,4 +11,5 @@
 
  /*Component styles */
  @import 'components/_Main.css';
+ @import 'components/_AstronomyCard.css';
  @import 'components/_NotFound.css';
